force-app/main/default/objects/Live_Approval__c/Live_Approval__c.object-meta.xml
<CustomObject>
    <label>Live Approval</label>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Live Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>