force-app/main/default/objects/Live_Approval__c/fields/Approval_Rule_10__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Rule 10</label>
    <referenceTo>RCA_Approval_Rule__c</referenceTo>
    <relationshipLabel>Live Approvals10</relationshipLabel>
    <relationshipName>Live_Approvals10</relationshipName>
    <type>Lookup</type>
</CustomField>