force-app/main/default/objects/Live_Approval__c/fields/Approval_Rule_11__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Rule 11</label>
    <referenceTo>RCA_Approval_Rule__c</referenceTo>
    <relationshipLabel>Live Approvals11</relationshipLabel>
    <relationshipName>Live_Approvals11</relationshipName>
    <type>Lookup</type>
</CustomField>