force-app/main/default/objects/Live_Approval__c/fields/Approval_Rule_12__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule_12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Rule 12</label>
    <referenceTo>RCA_Approval_Rule__c</referenceTo>
    <relationshipLabel>Live Approvals12</relationshipLabel>
    <relationshipName>Live_Approvals12</relationshipName>
    <type>Lookup</type>
</CustomField>