force-app/main/default/objects/Live_Approval__c/fields/Approver_10__c.field-meta.xml
<CustomField>
    <fullName>Approver_10__c</fullName>
    <label>Approver 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>