force-app/main/default/objects/Live_Approval__c/fields/Approver_11__c.field-meta.xml
<CustomField>
    <fullName>Approver_11__c</fullName>
    <label>Approver 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>