force-app/main/default/objects/Live_Approval__c/fields/Approver_12__c.field-meta.xml
<CustomField>
    <fullName>Approver_12__c</fullName>
    <label>Approver 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>