force-app/main/default/objects/Live_Approval__c/fields/Status_10__c.field-meta.xml
<CustomField>
    <fullName>Status_10__c</fullName>
    <label>Status 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Live_Approval_Status</valueSetName>
    </valueSet>
</CustomField>