force-app/main/default/objects/Live_Approval__c/fields/Status_12__c.field-meta.xml
<CustomField>
    <fullName>Status_12__c</fullName>
    <label>Status 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Live_Approval_Status</valueSetName>
    </valueSet>
</CustomField>