force-app/main/default/objects/Live_Approval__c/fields/Triggered_10__c.field-meta.xml
<CustomField>
    <fullName>Triggered_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered 10</label>
    <type>Checkbox</type>
</CustomField>