force-app/main/default/objects/Live_Approval__c/fields/Triggered_11__c.field-meta.xml
<CustomField>
    <fullName>Triggered_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered 11</label>
    <type>Checkbox</type>
</CustomField>