force-app/main/default/objects/Live_Approval__c/fields/Triggered_12__c.field-meta.xml
<CustomField>
    <fullName>Triggered_12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered 12</label>
    <type>Checkbox</type>
</CustomField>