force-app/main/default/objects/Live_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>